# CustomQt

./: .gitignore  README.md  pyproject.toml
customqt/: __init__.py  constants.py  linux.py  windows.py
tests/: test.py
