[build-system]
requires = ["setuptools>=65.5.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "CustomQt"
version = "0.1.0"
description = "A short description of your library"
authors = [
    { name="ultrasploit", email="hello@ultrasploit.com" }
]
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/ultrasploit/CustomQt"
"Documentation" = "https://github.com/ultrasploit/CustomQt/wiki"
"Source" = "https://github.com/ultrasploit/CustomQt"